# Configure modules path
SET ( MODULE_PATH "${${PROJECT_NAME}_SOURCE_DIR}/cmake" )
INCLUDE ( "${MODULE_PATH}/modules.cmake" )

INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}" )
INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}/${LIBPOSE_MODULE}" )

INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}" )
IF ( GOOGLE_TEST AND GOOGLE_TEST_PATH )
  INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}/${GOOGLE_TEST_PATH}/include" )
ENDIF()

INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}" )

INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}/utils/general" )

# additional files
LIST ( APPEND ${CSDETECTORTUNE_MODULE}_SRC ${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}/tinyxml2.cpp )
LIST ( APPEND ${CSDETECTORTUNE_MODULE}_SRC csDetectorTune )
LIST ( APPEND ${CSDETECTORTUNE_MODULE}_SRC ../general/projectLoader )

LIST ( APPEND ${CSDETECTORTUNE_MODULE}_LNK ${LIBPOSE_MODULE} )
LIST ( APPEND ${CSDETECTORTUNE_MODULE}_LNK ${OpenCV_LIBS} )
LIST ( APPEND ${CSDETECTORTUNE_MODULE}_LNK ${HDF5_LIBRARIES} )

ADD_EXECUTABLE ( ${CSDETECTORTUNE_MODULE} ${${CSDETECTORTUNE_MODULE}_SRC} )

LIST ( APPEND ${DETECTORMIXTUNE_MODULE}_SRC ${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}/tinyxml2.cpp )
LIST ( APPEND ${DETECTORMIXTUNE_MODULE}_SRC detectorMixTune )
LIST ( APPEND ${DETECTORMIXTUNE_MODULE}_SRC ../general/projectLoader )

LIST ( APPEND ${DETECTORMIXTUNE_MODULE}_LNK ${LIBPOSE_MODULE} )
LIST ( APPEND ${DETECTORMIXTUNE_MODULE}_LNK ${OpenCV_LIBS} )
LIST ( APPEND ${DETECTORMIXTUNE_MODULE}_LNK ${HDF5_LIBRARIES} )

ADD_EXECUTABLE ( ${DETECTORMIXTUNE_MODULE} ${${DETECTORMIXTUNE_MODULE}_SRC} )

LIST ( APPEND ${GENERICDETECTORTUNE_MODULE}_SRC ${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}/tinyxml2.cpp )
LIST ( APPEND ${GENERICDETECTORTUNE_MODULE}_SRC genericDetectorTune )
LIST ( APPEND ${GENERICDETECTORTUNE_MODULE}_SRC ../general/projectLoader )

LIST ( APPEND ${GENERICDETECTORTUNE_MODULE}_LNK ${LIBPOSE_MODULE} )
LIST ( APPEND ${GENERICDETECTORTUNE_MODULE}_LNK ${OpenCV_LIBS} )
LIST ( APPEND ${GENERICDETECTORTUNE_MODULE}_LNK ${HDF5_LIBRARIES} )

ADD_EXECUTABLE ( ${GENERICDETECTORTUNE_MODULE} ${${GENERICDETECTORTUNE_MODULE}_SRC} )

LIST ( APPEND ${HOGDETECTORTUNE_MODULE}_SRC ${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}/tinyxml2.cpp )
LIST ( APPEND ${HOGDETECTORTUNE_MODULE}_SRC hogDetectorTune )
LIST ( APPEND ${HOGDETECTORTUNE_MODULE}_SRC ../general/projectLoader )

LIST ( APPEND ${HOGDETECTORTUNE_MODULE}_LNK ${LIBPOSE_MODULE} )
LIST ( APPEND ${HOGDETECTORTUNE_MODULE}_LNK ${OpenCV_LIBS} )
LIST ( APPEND ${HOGDETECTORTUNE_MODULE}_LNK ${HDF5_LIBRARIES} )

ADD_EXECUTABLE ( ${HOGDETECTORTUNE_MODULE} ${${HOGDETECTORTUNE_MODULE}_SRC} )

LIST ( APPEND ${HYBRIDSOLVERTUNE_MODULE}_SRC ${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}/tinyxml2.cpp )
LIST ( APPEND ${HYBRIDSOLVERTUNE_MODULE}_SRC hybridSolverTune )
LIST ( APPEND ${HYBRIDSOLVERTUNE_MODULE}_SRC ../general/projectLoader )

LIST ( APPEND ${HYBRIDSOLVERTUNE_MODULE}_LNK ${LIBPOSE_MODULE} )
LIST ( APPEND ${HYBRIDSOLVERTUNE_MODULE}_LNK ${OpenCV_LIBS} )
LIST ( APPEND ${HYBRIDSOLVERTUNE_MODULE}_LNK ${HDF5_LIBRARIES} )

ADD_EXECUTABLE ( ${HYBRIDSOLVERTUNE_MODULE} ${${HYBRIDSOLVERTUNE_MODULE}_SRC} )

LIST ( APPEND ${NSKPSOLVERTUNE_MODULE}_SRC ${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}/tinyxml2.cpp )
LIST ( APPEND ${NSKPSOLVERTUNE_MODULE}_SRC nskpSolverTune )
LIST ( APPEND ${NSKPSOLVERTUNE_MODULE}_SRC ../general/projectLoader )

LIST ( APPEND ${NSKPSOLVERTUNE_MODULE}_LNK ${LIBPOSE_MODULE} )
LIST ( APPEND ${NSKPSOLVERTUNE_MODULE}_LNK ${OpenCV_LIBS} )
LIST ( APPEND ${NSKPSOLVERTUNE_MODULE}_LNK ${HDF5_LIBRARIES} )

ADD_EXECUTABLE ( ${NSKPSOLVERTUNE_MODULE} ${${NSKPSOLVERTUNE_MODULE}_SRC} )

LIST ( APPEND ${SURFDETECTORTUNE_MODULE}_SRC ${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}/tinyxml2.cpp )
LIST ( APPEND ${SURFDETECTORTUNE_MODULE}_SRC surfDetectorTune )
LIST ( APPEND ${SURFDETECTORTUNE_MODULE}_SRC ../general/projectLoader )

LIST ( APPEND ${SURFDETECTORTUNE_MODULE}_LNK ${LIBPOSE_MODULE} )
LIST ( APPEND ${SURFDETECTORTUNE_MODULE}_LNK ${OpenCV_LIBS} )
LIST ( APPEND ${SURFDETECTORTUNE_MODULE}_LNK ${HDF5_LIBRARIES} )

ADD_EXECUTABLE ( ${SURFDETECTORTUNE_MODULE} ${${SURFDETECTORTUNE_MODULE}_SRC} )

LIST ( APPEND ${TLPSSOLVERTUNE_MODULE}_SRC ${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}/tinyxml2.cpp )
LIST ( APPEND ${TLPSSOLVERTUNE_MODULE}_SRC tlpsSolverTune )
LIST ( APPEND ${TLPSSOLVERTUNE_MODULE}_SRC ../general/projectLoader )

LIST ( APPEND ${TLPSSOLVERTUNE_MODULE}_LNK ${LIBPOSE_MODULE} )
LIST ( APPEND ${TLPSSOLVERTUNE_MODULE}_LNK ${OpenCV_LIBS} )
LIST ( APPEND ${TLPSSOLVERTUNE_MODULE}_LNK ${HDF5_LIBRARIES} )

ADD_EXECUTABLE ( ${TLPSSOLVERTUNE_MODULE} ${${TLPSSOLVERTUNE_MODULE}_SRC} )

# TODO: Library names should be taken from variables
TARGET_LINK_LIBRARIES ( ${CSDETECTORTUNE_MODULE} ${${CSDETECTORTUNE_MODULE}_LNK} )
TARGET_LINK_LIBRARIES ( ${DETECTORMIXTUNE_MODULE} ${${CSDETECTORTUNE_MODULE}_LNK} )
TARGET_LINK_LIBRARIES ( ${GENERICDETECTORTUNE_MODULE} ${${CSDETECTORTUNE_MODULE}_LNK} )
TARGET_LINK_LIBRARIES ( ${HOGDETECTORTUNE_MODULE} ${${CSDETECTORTUNE_MODULE}_LNK} )
TARGET_LINK_LIBRARIES ( ${HYBRIDSOLVERTUNE_MODULE} ${${CSDETECTORTUNE_MODULE}_LNK} )
TARGET_LINK_LIBRARIES ( ${NSKPSOLVERTUNE_MODULE} ${${CSDETECTORTUNE_MODULE}_LNK} )
TARGET_LINK_LIBRARIES ( ${SURFDETECTORTUNE_MODULE} ${${CSDETECTORTUNE_MODULE}_LNK} )
TARGET_LINK_LIBRARIES ( ${TLPSSOLVERTUNE_MODULE} ${${CSDETECTORTUNE_MODULE}_LNK} )

# Installation instructions for the test module
# Please specify the installation instructions sprcific
# To the architecture the project is being built for.

IF ( UNIX )
	INSTALL (
		TARGETS ${CSDETECTORTUNE_MODULE} ${DETECTORMIXTUNE_MODULE} ${GENERICDETECTORTUNE_MODULE} ${HOGDETECTORTUNE_MODULE} ${HYBRIDSOLVERTUNE_MODULE} ${NSKPSOLVERTUNE_MODULE} ${SURFDETECTORTUNE_MODULE} ${TLPSSOLVERTUNE_MODULE}
		RUNTIME DESTINATION bin/${ROOT_PROJECT_NAME}
		LIBRARY DESTINATION lib/${ROOT_PROJECT_NAME}
		ARCHIVE DESTINATION lib/static/${ROOT_PROJECT_NAME}
	)
ELSEIF ( WIN32 )
	INSTALL (
		TARGETS ${CSDETECTORTUNE_MODULE} ${DETECTORMIXTUNE_MODULE} ${GENERICDETECTORTUNE_MODULE} ${HOGDETECTORTUNE_MODULE} ${HYBRIDSOLVERTUNE_MODULE} ${NSKPSOLVERTUNE_MODULE} ${SURFDETECTORTUNE_MODULE} ${TLPSSOLVERTUNE_MODULE}
		RUNTIME DESTINATION bin/
		LIBRARY DESTINATION lib/
		ARCHIVE DESTINATION lib/static/
	)
ENDIF()

